force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/AFSC__FS_URL_Scan_Log__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: URL scan event logs</description>
    <label>URL Scan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>URL Scan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>