force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Action__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
                <color>#CC0000</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Passed</fullName>
                <color>#009900</color>
                <label>Passed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>