force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Categories__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Categories__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>abortion</fullName>
            </value>
            <value>
                <fullName>adserving</fullName>
            </value>
            <value>
                <fullName>adult</fullName>
            </value>
            <value>
                <fullName>alcohol and tobacco</fullName>
            </value>
            <value>
                <fullName>anonymizers</fullName>
            </value>
            <value>
                <fullName>auctions</fullName>
            </value>
            <value>
                <fullName>banking</fullName>
            </value>
            <value>
                <fullName>blogs</fullName>
            </value>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>dating</fullName>
            </value>
            <value>
                <fullName>drugs</fullName>
            </value>
            <value>
                <fullName>entertainment</fullName>
            </value>
            <value>
                <fullName>gambling</fullName>
            </value>
            <value>
                <fullName>games</fullName>
            </value>
            <value>
                <fullName>hacking</fullName>
            </value>
            <value>
                <fullName>hate</fullName>
            </value>
            <value>
                <fullName>job search</fullName>
            </value>
            <value>
                <fullName>paymentservice</fullName>
            </value>
            <value>
                <fullName>scam</fullName>
            </value>
            <value>
                <fullName>shopping</fullName>
            </value>
            <value>
                <fullName>social networking</fullName>
            </value>
            <value>
                <fullName>software download</fullName>
            </value>
            <value>
                <fullName>spam</fullName>
            </value>
            <value>
                <fullName>streaming media</fullName>
            </value>
            <value>
                <fullName>violence</fullName>
            </value>
            <value>
                <fullName>warez</fullName>
            </value>
            <value>
                <fullName>weapons</fullName>
            </value>
            <value>
                <fullName>webmail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>