force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Direction__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>