force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Disallowed_Category__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Disallowed_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disallowed Category</label>
    <type>Checkbox</type>
</CustomField>