force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>AFSC__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>