force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Link__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>URL</label>
    <referenceTo>AFSC__FSLink__c</referenceTo>
    <relationshipLabel>URL Scan</relationshipLabel>
    <relationshipName>URL_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>