force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Location__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Field Value</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>