force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Reputation__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Reputation__c</fullName>
    <label>Reputation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>