force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Reputation_Desc__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Reputation_Desc__c</fullName>
    <label>Reputation Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Malicious</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
                <default>true</default>
                <label>Not available</label>
            </value>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Suspicious</fullName>
            </value>
            <value>
                <fullName>Trusted</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Unsafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>