force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Reputation_Text__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Reputation_Text__c</fullName>
    <formula>IF(AFSC__Reputation__c &lt; -80, &quot;Malicious (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
	IF(AFSC__Reputation__c &lt; -20, &quot;Unsafe (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
		IF(AFSC__Reputation__c &lt; 0, &quot;Suspicious (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
			IF(AFSC__Reputation__c &lt; 80, &quot;Unknown (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
				IF(AFSC__Reputation__c &lt; 100, &quot;Safe (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
					IF(AFSC__Reputation__c = 100, &quot;Trusted (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
						&quot;Not available&quot;
					)
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reputation</label>
    <type>Text</type>
</CustomField>