force-app/main/default/objects/AFSC__FS_URL_Scan_Log__c/fields/AFSC__Verdict__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Verdict__c</fullName>
    <label>Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
                <color>#009900</color>
                <label>Safe</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#666666</color>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Unsafe</fullName>
                <color>#CC0000</color>
                <label>Unsafe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>